--- a/app/src/main/res/layout/activity_current_score.xml
+++ b/app/src/main/res/layout/activity_current_score.xml
@@ -12,7 +12,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/reader_text_view"
+            android:id="@+id/pair_result_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Par:"
