--- a/app/src/main/res/layout/activity_gameplay.xml
+++ b/app/src/main/res/layout/activity_gameplay.xml
@@ -79,7 +79,7 @@
             android:textColor="@drawable/blue_color"
             android:gravity="center"
             android:layout_gravity="bottom"
-            android:text="" />
+            android:text="Trenutni rezultat: " />
 
         <LinearLayout
             android:layout_width="match_parent"
