--- a/app/src/main/res/layout/activity_pair_up_players.xml
+++ b/app/src/main/res/layout/activity_pair_up_players.xml
@@ -1,35 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<ScrollView android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
-    tools:context=".PairUpPlayersActivity"        >
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        tools:context=".PairUpPlayersActivity">
 
-      <Button
+        <Button
             android:id="@+id/start_game"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Započni igru" />
 
         <Button
-            android:id="@+id/create_team_button"
+            android:id="@+id/create_new_player_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Dodaj igrača" />
 
-        <ListView
-            android:id="@+id/list_view"
+        <Button
+            android:id="@+id/pair_players_button"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="35dp">
+            android:layout_height="wrap_content"
+            android:text="Upari igrače" />
 
+        <TextView
+            android:id="@+id/text_view_pairs"
+            android:layout_width="match_parent"
+            android:textSize="15sp"
+            android:layout_height="wrap_content"
+            android:text="" />
+
+        <ListView
+            android:id="@+id/players_list_view"
+            android:layout_width="match_parent"
+            android:layout_height="266dp"
+            android:layout_marginHorizontal="15dp">
         </ListView>
 
-</LinearLayout>
+        <ListView
+            android:id="@+id/teams_list_view"
+            android:layout_width="match_parent"
+            android:layout_height="277dp"
+            android:layout_marginHorizontal="15dp">
+        </ListView>
 
+    </LinearLayout>
+</ScrollView>
 
 
