--- a/app/src/main/res/layout/activity_current_score.xml
+++ b/app/src/main/res/layout/activity_current_score.xml
@@ -12,10 +12,20 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/round_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#000"
+            android:textSize="35sp"
+            android:layout_marginTop="10dp"
+            android:layout_marginHorizontal="15dp"
+            android:textStyle="bold" />
+
+        <TextView
             android:id="@+id/pair_result_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Par:"
+            android:layout_marginHorizontal="15dp"
             android:textColor="#000"
             android:textSize="35sp"
             android:textStyle="bold" />
@@ -25,7 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/blue_color"
-            android:text="Sljedeći par" />
+             />
     </LinearLayout>
 
 
