--- a/app/src/main/res/layout/activity_current_score.xml
+++ b/app/src/main/res/layout/activity_current_score.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<ScrollView android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CurrentScoreActivity">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        tools:context=".CurrentScoreActivity"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -30,13 +30,19 @@
             android:textSize="35sp"
             android:textStyle="bold" />
 
+        <ListView
+            android:id="@+id/summary_list_view"
+            android:layout_width="match_parent"
+            android:layout_height="466dp"
+            android:layout_marginHorizontal="15dp">
+        </ListView>
+
         <Button
             android:id="@+id/button_next_pair"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/blue_color"
              />
+
     </LinearLayout>
-
-
-</android.support.design.widget.CoordinatorLayout>
+</ScrollView>
