--- a/app/src/main/res/layout/activity_current_score.xml
+++ b/app/src/main/res/layout/activity_current_score.xml
@@ -5,7 +5,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
         tools:context=".CurrentScoreActivity"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -41,7 +40,8 @@
             android:id="@+id/button_next_pair"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/blue_color"
+            android:background="@drawable/button_shape"
+            android:layout_margin="10dp"
              />
 
     </LinearLayout>
