--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,62 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-
-    <android.support.design.widget.AppBarLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center">
 
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+        <Button
+            android:id="@+id/button_play"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:layout_height="wrap_content"
+            android:background="@drawable/basic_button"
+            android:layout_margin="10dp"
+            android:text="@string/play" />
 
-        <LinearLayout
+        <Button
+            android:id="@+id/button_settings"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="center">
-
-            <Button
-                android:id="@+id/button_play"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Igraj" />
-
-            <Button
-                android:id="@+id/button_settings"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Postavke" />
+            android:layout_height="wrap_content"
+            android:background="@drawable/basic_button"
+            android:layout_margin="10dp"
+            android:text="@string/settings" />
 
 
-            <Button
-                android:id="@+id/button_rules"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Pravila" />
+        <Button
+            android:id="@+id/button_rules"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/basic_button"
+            android:layout_margin="10dp"
+            android:text="@string/rules" />
 
 
-            <Button
-                android:id="@+id/button_exit"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Exit" />
+        <Button
+            android:id="@+id/button_exit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/basic_button"
+            android:layout_margin="10dp"
+            android:text="@string/exit" />
 
         </LinearLayout>
 
-    </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_main" />
-
-
 
 </android.support.design.widget.CoordinatorLayout>
