--- a/app/src/main/res/layout/pairs_row.xml
+++ b/app/src/main/res/layout/pairs_row.xml
@@ -11,8 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
 
 
         <LinearLayout
@@ -37,7 +36,6 @@
                 android:textColor="#000"
                 android:textSize="20sp"
                 android:textStyle="bold" />
-
 
         </LinearLayout>
 
