--- a/app/src/main/res/drawable/basic_button.xml
+++ b/app/src/main/res/drawable/basic_button.xml
@@ -4,16 +4,15 @@
     <corners android:radius="15dp" />
     <gradient
         android:angle="45"
-        android:centerColor="#4CAF50"
-        android:centerX="0%"
-        android:endColor="#4CAF50"
-        android:startColor="#4CAF50"
+        android:centerColor="#03A9F4"
+        android:endColor="#03A9F4"
+        android:startColor="#2196F3"
         android:type="linear" />
     <padding
-        android:bottom="5dp"
-        android:left="5dp"
-        android:right="5dp"
-        android:top="5dp" />
+        android:bottom="0dp"
+        android:left="0dp"
+        android:right="0dp"
+        android:top="0dp" />
     <size
         android:width="270dp"
         android:height="60dp" />
