--- a/app/src/main/res/layout/activity_current_score.xml
+++ b/app/src/main/res/layout/activity_current_score.xml
@@ -40,7 +40,7 @@
             android:id="@+id/button_next_pair"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/button_shape"
+            android:background="@drawable/basic_button"
             android:layout_margin="10dp"
              />
 
