--- a/app/src/main/res/layout/activity_gameplay.xml
+++ b/app/src/main/res/layout/activity_gameplay.xml
@@ -43,7 +43,7 @@
             android:id="@+id/button_start"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/button_shape"
+            android:background="@drawable/basic_button"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:text="@string/start_round" />
