--- a/app/src/main/res/layout/activity_current_score.xml
+++ b/app/src/main/res/layout/activity_current_score.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
-        tools:context=".CurrentScoreActivity"
+        tools:context=".activities.CurrentScoreActivity"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
