--- a/app/src/main/res/layout/content_current_score.xml
+++ b/app/src/main/res/layout/content_current_score.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".CurrentScoreActivity"
+    tools:context=".activities.CurrentScoreActivity"
     tools:showIn="@layout/activity_current_score">
 
 </android.support.constraint.ConstraintLayout>
