--- a/app/src/main/res/layout/content_pair_up_players.xml
+++ b/app/src/main/res/layout/content_pair_up_players.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".PairUpPlayersActivity"
+    tools:context=".activities.PairUpPlayersActivity"
     tools:showIn="@layout/activity_pair_up_players">
 
 
