--- a/app/src/main/res/layout/content_rules.xml
+++ b/app/src/main/res/layout/content_rules.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".RulesActivity"
+    tools:context=".activities.RulesActivity"
     tools:showIn="@layout/activity_rules">
 
 </android.support.constraint.ConstraintLayout>
