--- a/app/src/main/res/layout/activity_gameplay.xml
+++ b/app/src/main/res/layout/activity_gameplay.xml
@@ -100,6 +100,7 @@
                 android:layout_gravity="bottom"
                 android:layout_weight="1"
                 android:background="@drawable/pass_button"
+                android:enabled="false"
                 android:layout_margin="10dp"
                 android:text="@string/pass" />
 
@@ -110,6 +111,7 @@
                 android:layout_gravity="bottom"
                 android:layout_weight="1"
                 android:background="@drawable/correct_button"
+                android:enabled="false"
                 android:layout_margin="10dp"
                 android:soundEffectsEnabled="true"
                 android:text="@string/correct" />
